<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="shoppingReceipt">Shopping Receipt</string>
    <string name="addReceipt">Add New Receipt</string>
    <string name="storeName">Store Name</string>
    <string name="purchaseDate">Purchase Date</string>
    <string name="datePicker">Pick Purchase date</string>
    <string name="imagePicker">Take Photo of Receit</string>
    <string name="receiptAmount">Receipt Amount (CAD)</string>
    <string name="addReceiptToList">Add To My Shopping List</string>
    <string name="editReceipt">Edit Receipt</string>
    <string name="viewReceipt">View Receipt</string>
    <string name="searchReceipt">Search Receipt</string>
    <string name="chooseMonth">Choose A Month</string>
     
    <string-array name="months_array">
        <item >Search by Month</item>
        <item >January</item>
        <item >February</item>
        <item >March</item>
        <item >April</item>
        <item >May</item>
        <item >June</item>
        <item >July</item>
        <item >August</item>
        <item >September</item>
        <item >October</item>
        <item >November</item>
        <item >December</item>
    </string-array>

</resources>