<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cart" >
     <EditText
        android:id="@+id/etStoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/storeName"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvPurchaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/purchaseDate" />

    <Button
        android:id="@+id/btDatePicker"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/oval_background"
        android:layout_marginBottom="40dp"
        android:text="@string/datePicker"
        android:onClick="datePickerClick" />

    <ImageView
        android:id="@+id/imageViewAddReceipt"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btImagePicker"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/oval_background"
        android:layout_marginBottom="20dp"
        android:text="@string/imagePicker"
        android:onClick="imagePickerClick"/>

    <EditText
        android:id="@+id/etReceiptAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/receiptAmount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btaddReceiptToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/oval_background"
        android:text="@string/addReceiptToList"
        android:onClick="addReceiptToListClick" />

</LinearLayout>
